attempt at fixing responsiveness of splash page. partially fixed overflow

--- a/front-end/css/custom.css
+++ b/front-end/css/custom.css
@@ -31,11 +31,25 @@
     width: 100%;
     height: 100%;
     background-size: cover;
-    overflow: hidden;
     color: #FFFFFF;
+    overflow: hidden;
+
 }
-/*bg image from before*/
-/*http://fooyoh.com/files/attach/images/3004/446/239/008/weneverlookup1.jpg*/
+
+.jumbotron-overlay {
+    background-color: rgba(44, 62, 80, 0.3);
+    background-image: url("../images/pattern.png");
+    background-repeat: repeat;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 0;
+    color:#ffffff;
+}
+
+
 .jumbotron h1 {
 
 	text-align:left;
@@ -54,6 +68,7 @@
 	margin-right:15%;
 	padding-left: 1%;
 }
+
 .jumbotron h5 {
 	margin-top:80px;
 	margin-right:50px;
@@ -61,25 +76,4 @@
     text-align:right;
     letter-spacing:0px;
 	line-height: 20px;
-}
-
-
-.jumbotron-overlay {
-    background-color: rgba(44, 62, 80, 0.3);
-    background-image: url("../images/pattern.png");
-    background-repeat: repeat;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 0;
-}
-
-
-
-	
-html, body {
-	height:100%;
-	width:100%;
 }
